# wordsmyth

./: .dockerignore  .gitignore  CITATION.cff  CLI.md  Dockerfile  Dockerfile.interns  Dockerfile.v2  LICENSE  Makefile  README.md  TODO.md  WEB.md  aliases.sh  app.py  client.py  comments.json  data.csv  data.json  deepmoj.py  demo.py  docker-compose.images.yml  docker-compose.yml  download_torchmoji  e.py  eee.py  esranks.json  evaluate_comments.py  example.py  example1.py  extracts.csv  gradel.py  help.html  helper  holup.py  index.html  internal.dockerfile  log.txt  lol.py  main.py  manage  (+28 more)
.github/: runtests.sh
.github/workflows/: publish.yml  release.yml  runtests.yml  test.yml  thing.yml
algorithms/: __init__.py  torchmoji.py
api/: docker-compose.yml
api/modelserver/: Dockerfile  main.py  requirements.txt
api/webserver/: main.py
archive/: B016UZ7GGE.json  B016UZ7GGE.pkl  B089VX66V4.json  B089VX66V4.pkl
citations/: Kralj2015emojis.bib  felbo2017.bib
client/: README.md
data/: output.html
desktop/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1692642260230-7446f5be96528.mjs
desktop/src/: App.svelte  Router.svelte  alert.ts  stores.ts
desktop/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
docs/: CONFIG.md  EXTENDING.md  README.md  WEB.md  cli.md  web.md
docs/research/: abstract.md  paper.md
future/: README.md  a.py  api.py  client.py  comments.py  copyReviews.js  data.csv  data.json  dumb.csv  dumpdata.py  dumped.db  dumped.json  emojimap.json  example.py  examplev2.py  extracts.csv  final.csv  final.ipynb  finalstep.py  finnally.json  fix.py  fixed.json  getesr.py  lol.py  modelparser.py  out.csv  output.json  overlap.py  parser.py  part2.py  pipetest.py  poop.csv  rate.py  rate_compile.py  restocsv.py  server.py  something.ipynb  test.ipynb  test.py  thing.html  (+1 more)
future/pipeline/: comments.json  evaluate_comments.py  functions.py
future/test/: data.json  reviews.json
live/: app.py  helpers.py  main.py  sender.py
live/templates/: index.html
media/: ytstars.excalidraw
pipe/: algo.py  fl  fl.py  flair.py  helpers.py  mg.py  tm  tm.py
rateboat/: config.py
rateboat/algorithms/: wrapper.py
rateboat/internal/: Dockerfile  requirements.txt
rateboat/utils/: comments_v3.py
requirements/: api.txt  internal.txt  store.txt
scripts/: amazon.py  amazon_more.py  catplot.ipynb  comments.json  comments.py  conflicting_examples.py  emojimap.py  fetch_amz.py  fetch_yt.py  generate_conjugation.py  generate_cool_stuff.py  generate_cool_stuff_csv.py  generate_report.py  generate_reviews.py  getesr  getesr.py  github.css  killcons  killcons.sh  metrics.py  model.ipynb  modeleval.ipynb  plug.py  pool_prediction.py  predict.py  predict_yt.py  scale  scale.sh  scrape.py  scrape_bestselling.py  test.py  transform.py  viz.ipynb  youtube.py
scripts/sourcing/: amazon.py
src/: __init__.py
src/algo/: wrapper.py
src/algorithms/: wrapper.py
src/amazon_utils/: __init__.py  bestsellers.py  scrape.py  scrape_parallel.py
src/api/: main.py
src/crawlers/: amazon.py
test/: client.py  data2.json  evaluate.py  server.proto  server.py  server_pb2_grpc.py  stream.csv  stream.json  stream.txt  transform.py  transform2.py
tests/: classes.py  conftest.py  fixtures.py  test_mock_models.py  test_models.py  test_rate.py
tools/: comments.py  emojimap.py  fetch_esr.py
wordsmyth/: __init__.py  constants.py  core.py  items.py  post.py  rate.py  rate_utils.py  types.py  utils.py
(+160 files in other folders)
