[project]
name = "wordsmyth"

version = "0.0.0"
description = "Generate star ratings from user content reviews"

readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Language processing :: Marketing",
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

