[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordsmyth"

version = "0.0.0"
description = "Generate star ratings from user content reviews"

readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

dependencies = [
    "torchMoji @ git+https://github.com/themysticsavages/torchMoji",
    "regex==2022.3.2",
    "transformers",
    "flair",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Language processing :: Marketing",
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
cc = ["spacy>=3.7.2", "nltk>=3.8.1"]

[tool.setuptools.package-data]
data = ["emojimap.json", "pytorch_model.bin", "vocabulary.json"]

[tool.distutils.bdist_wheel]
universal = true
