[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordsmyth"

version = "0.10.1"
description = "Generate star ratings from user content reviews"

readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

dependencies = [
    "torchMoji @ git+https://github.com/themysticsavages/torchMoji",
    "regex==2022.3.2",
    "transformers",
    "flair",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Language processing :: Marketing",
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
scraping = ["selenium>=4.15.2"]

[tool.setuptools.package-data]
data = ["emojimap.json", "pytorch_model.bin", "vocabulary.json", "modifiers.json"]

[tool.distutils.bdist_wheel]
universal = true
