[metadata]
name = ytstars
description = ytstars
author = themysticsavages
license = MIT
license_fil = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3

[options]
packages =
    algorithms
    internal
    utils
package_dir =
    =ytstars
zip_safe = no